<resources>
    <string name="app_name">calculator</string>
    <string name="result">0</string>
    <string name="result_view">0</string>
    <string name="percentage_btn">%</string>
    <string name="delete_btn">DEL</string>
    <string name="seven_btn">7</string>
    <string name="eight_btn">8</string>
    <string name="nine_btn">9</string>
    <string name="division_btn">/</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="x_btn">X</string>
    <string name="one_btn">1</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="subtraction_btn">-</string>
    <string name="zero_btn">0</string>
    <string name="point_btn">,</string>
    <string name="equal_btn">=</string>
    <string name="addition_btn">+</string>
    <string name="squareRoot_btn">√</string>
    <string name="x_y">x^y</string>
</resources>
